# mobile-robot-navigation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: report.yml
configs/: config.yaml
configs/agent/: default.yaml
configs/environment/: default.yaml
configs/noise/: default.yaml
configs/training/: default.yaml
docs/: architecture.md
notebooks/: last_modified.ipynb
report/: eval_policy.py  main.tex  make_figures.py  make_gif.py  run_experiment.py
report/assets/: eval_stats.json  rewards.json  trajectory.json  trajectory_success.json
report/scripts/: eval_policy.py  make_figures.py  make_gif.py  run_experiment.py
src/mobile_robot_navigation/: __init__.py  agent.py  config_schema.py  environment.py  lib.py  run.py  viz.py
tests/: test_agent.py  test_api_stability.py  test_environment.py  test_properties.py
tests/tools/: test_check_imports.py
