[project]
name = "mobile-robot-navigation"
version = "0.1.0"
description = "DDPG reinforcement-learning agent for mobile-robot navigation in the ChopperScape environment."
authors = [{ name = "Nikita S.", email = "nikswirlo@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hydra-core>=1.3.3,<2.0.0",
    "numpy>=1.24,<2.0",
    "torch>=2.0,<3.0",
    "gym>=0.26,<0.27",
    "matplotlib>=3.5",
]

[project.scripts]
mobile-robot-navigation = "mobile_robot_navigation.run:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "mutmut>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pre-commit>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["tools/pre_commit", "tools/test_utils"]

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = ["notebooks", "report"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "C4", "PT"]

[tool.typos.files]
extend-exclude = ["notebooks", "report"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tools"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.mutmut]
source_paths = ["src/mobile_robot_navigation/"]

[tool.coverage.run]
branch = true
source = ["mobile_robot_navigation", "tools"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mobile_robot_navigation"]
