[project]
name = "mobile-robot-navigation"
version = "0.1.0"
description = "DDPG reinforcement-learning agent for mobile-robot navigation in the MobileRobotEnv environment."
authors = [{ name = "Nikita S.", email = "nikswirlo@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hydra-core>=1.3.3,<2.0.0",
    "numpy>=1.24,<3.0",
    "torch>=2.0,<3.0",
    "gym>=0.26,<0.27",
    "matplotlib>=3.5",
]

[project.scripts]
mobile-robot-navigation = "mobile_robot_navigation.run:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "mutmut>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pre-commit>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["tools/pre_commit", "tools/test_utils"]

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = ["report/assets", "report/figures"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
# The scripts pin the matplotlib backend before importing pyplot.
"report/scripts/*" = ["E402"]

[tool.typos.files]
extend-exclude = ["report/assets", "report/figures"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tools", "report/scripts"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Report scripts are research glue: style rules apply, but full strict
# typing would be disproportionate — untyped defs stay allowed there.
[[tool.mypy.overrides]]
module = ["run_experiment", "eval_policy", "make_figures", "make_gif"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.mutmut]
source_paths = ["src/mobile_robot_navigation/"]
# mutmut runs the suite from a copied `mutants/` tree; carry the `tools/`
# packages (they sit on pytest's `pythonpath`) and `pyproject.toml` along so
# the tool tests still import and the copied tree is self-contained.
also_copy = ["tools", "pyproject.toml"]

[tool.coverage.run]
branch = true
source = ["mobile_robot_navigation", "tools"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mobile_robot_navigation"]
